Fix text overflow on Fatal Run 2089 page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2465,14 +2465,6 @@ textarea.form-input::-webkit-resizer {
     content: none;
   }
 
-  .nowrap {
-    white-space: nowrap;
-    display: inline;
-  }
-
-  .nowrap a {
-    display: inline;
-  }
 
   .tech-list {
     display: flex;
